--- a/css_7/style.css
+++ b/css_7/style.css
@@ -1039,9 +1039,6 @@ main .bg {
   overflow-y: auto;
   overflow-x: hidden;
   scrollbar-width: thin;
-  box-sizing: border-box;
-  border: solid 1px #775017;
-  border-width: 0px 1px;
 }
 .right .room .livelist::-webkit-scrollbar {
   width: 5px;
@@ -1067,8 +1064,8 @@ main .bg {
   position: relative;
   overflow: hidden;
   cursor: pointer;
-  background: #252525;
-  border-bottom: solid 1px #b5833b;
+  background: #3d5261;
+  border-bottom: solid 1px #2e3f57;
 }
 .right .room .livelist ul li:nth-of-type(1) {
   margin-top: 5px;
@@ -1078,30 +1075,29 @@ main .bg {
 }
 .right .room .livelist ul li:hover::before, .right .room .livelist ul li:active::before {
   transform: rotate(90deg);
-  border-color: transparent #ff4719;
+  border-color: transparent #feb300;
 }
 .right .room .livelist ul li:hover .gameName, .right .room .livelist ul li:active .gameName {
-  color: #ff4719;
-  background: #3c3c3c;
+  color: #feb300;
+  background: #2e3f57;
 }
 .right .room .livelist ul li:hover .games, .right .room .livelist ul li:active .games {
-  color: #ff4719;
+  color: #feb300;
 }
 .right .room .livelist ul li.active {
   height: auto;
-  background: #3c3c3c;
 }
 .right .room .livelist ul li.active::before {
   transform: rotate(90deg);
-  border-color: transparent #ff4719;
+  border-color: transparent #feb300;
 }
 .right .room .livelist ul li.active .gameName {
-  color: #ff4719;
-  background: #3c3c3c;
-  border-bottom: solid 1px #b5833b;
+  color: #feb300;
+  background: #2e3f57;
+  box-shadow: 0px 0px 0px 1px #feb300 inset;
 }
 .right .room .livelist ul li.active .games {
-  color: #ff4719;
+  color: #feb300;
 }
 .right .room .livelist ul li::before {
   content: "";
@@ -1110,7 +1106,7 @@ main .bg {
   height: 0px;
   border-style: solid;
   border-width: 7px 0px 7px 8px;
-  border-color: transparent #ffd973;
+  border-color: transparent #2e3f57;
   right: 25px;
   top: 8px;
   transition: 0.3s all;
@@ -1119,7 +1115,7 @@ main .bg {
   display: block;
   width: 100%;
   height: 30px;
-  color: #ffc13c;
+  color: #ffcc41;
   font-size: 13px;
   box-sizing: border-box;
   padding-left: 25px;
@@ -1128,7 +1124,7 @@ main .bg {
 .right .room .livelist ul li .games {
   font-size: 13px;
   font-weight: bold;
-  color: #fb770a;
+  color: #ffcc41;
   position: absolute;
   right: 60px;
   top: 0px;
@@ -1136,7 +1132,7 @@ main .bg {
 .right .room .livelist ul li .innerList {
   width: 96%;
   height: 70px;
-  background: #181818;
+  background: #2e3f57;
   position: relative;
   cursor: default;
   border-radius: 5px;
@@ -1153,32 +1149,31 @@ main .bg {
   top: 50%;
   transform: translateY(-50%);
   font-size: 12px;
-  color: #ababab;
+  color: #f1f1f1;
 }
 .right .room .livelist ul li .innerList p span {
   font-weight: bold;
-  color: #ffc13c;
+  color: #feb300;
 }
 .right .room .livelist ul li .innerList p span .situation {
   font-weight: normal;
   float: right;
   margin-right: 20px;
-  color: #8e7352;
+  color: #bcbcbc;
 }
 .right .room .livelist ul li .innerList p span .situation.onLive {
-  position: relative;
-  color: #ffffff;
-  margin: -7px 15px 0px 0px;
-}
-.right .room .livelist ul li .innerList p span .situation.onLive::after {
-  content: "";
   position: absolute;
-  width: 40px;
-  height: 19px;
-  top: -1px;
-  left: -10px;
-  background: url("../images/forCss_7/liveBg3.png") no-repeat;
-  z-index: -1;
+  color: transparent;
+  -webkit-user-select: none;
+          user-select: none;
+  top: -8px;
+  right: -10px;
+  width: 0px;
+  height: 0px;
+  border-radius: 0px 5px 0px 0px;
+  border-style: solid;
+  border-width: 10px;
+  border-color: #109037 #109037 transparent transparent;
 }
 .right .room .livelist ul li .innerList p button {
   position: absolute;
@@ -1186,13 +1181,29 @@ main .bg {
   bottom: 0px;
   width: 70px;
   height: 30px;
-  background: #ffbd38;
+  background: #ffffff;
   border-radius: 3px;
-  color: #000000;
+  color: #2e3f57;
 }
-.right .room .livelist ul li .innerList p button:hover, .right .room .livelist ul li .innerList p button:active, .right .room .livelist ul li .innerList p button.active {
-  background: #ff4719;
+.right .room .livelist ul li .innerList p button:hover, .right .room .livelist ul li .innerList p button:active {
+  background: #feb300;
+  color: #2e3f57;
+}
+.right .room .livelist ul li .innerList p button.active {
+  background: #19202a;
+  color: #feb300;
+}
+.right .room .livelist ul li .innerList p button.active:hover, .right .room .livelist ul li .innerList p button.active:active {
+  border: solid 1px #feb300;
+  background: #212832;
   color: #ffffff;
+}
+.right .room .livelist ul li .innerList p button.disable {
+  background: #909090 !important;
+  color: #cccccc !important;
+  -webkit-user-select: none;
+          user-select: none;
+  pointer-events: none;
 }
 .right .room .bettingStatus {
   display: none;
@@ -5314,7 +5325,7 @@ main .bg {
 .hideboard {
   width: 1260px;
   height: 80px;
-  background: #101010;
+  background: #19202a;
   position: absolute;
   z-index: 5;
   left: 280px;
@@ -5324,7 +5335,7 @@ main .bg {
 .topfix {
   width: calc(100% - 660px);
   height: 50px;
-  background: #252525;
+  background: #3d5261;
   position: absolute;
   top: 15px;
   left: 280px;
@@ -7804,27 +7815,38 @@ main .bg {
 .fixside .search {
   width: 200px;
   height: 55px;
-  background: #1b1b1b;
+  background: #2e3f57;
   position: absolute;
   top: 0px;
   left: 65px;
   transition: 0.5s left;
   z-index: 2;
-  border: solid 1px #a88335;
-  border-bottom: none;
+  border: solid 1px #feb300;
 }
 .fixside .search.open {
   left: -135px;
+  border-left: none;
 }
-.fixside .search.open .searchbut:hover, .fixside .search.open .searchbut:active, .fixside .search.open .searchbut.active {
+.fixside .search.open .searchbut.active {
+  left: -56px;
+  border-right: none;
+  border-radius: 8px 0px 0px 8px;
+  background: #2e3f57;
+}
+.fixside .search.open .searchbut.active .fixsideimg {
+  background-position-y: 0%;
+}
+.fixside .search.open .searchbut.active span {
+  color: #feb300;
+}
+.fixside .search.open .searchbut.active:hover, .fixside .search.open .searchbut.active:active {
   background: #ffbd38;
-  border-color: transparent;
 }
-.fixside .search.open .searchbut:hover .fixsideimg, .fixside .search.open .searchbut:active .fixsideimg, .fixside .search.open .searchbut.active .fixsideimg {
+.fixside .search.open .searchbut.active:hover span, .fixside .search.open .searchbut.active:active span {
+  color: #2e3f57;
+}
+.fixside .search.open .searchbut.active:hover .fixsideimg, .fixside .search.open .searchbut.active:active .fixsideimg {
   background-position-y: 100%;
-}
-.fixside .search.open .searchbut:hover span, .fixside .search.open .searchbut:active span, .fixside .search.open .searchbut.active span {
-  color: #000000;
 }
 .fixside .search .searchbut {
   width: 55px;
@@ -7832,25 +7854,24 @@ main .bg {
   cursor: pointer;
   border-radius: 8px;
   position: absolute;
-  top: 0px;
+  top: -1px;
   left: -60px;
   text-align: center;
-  background: #1b1b1b;
-  border: solid 1px #a88335;
+  background: #2e3f57;
+  border: solid 1px #feb300;
 }
 .fixside .search .searchbut:hover, .fixside .search .searchbut:active, .fixside .search .searchbut.active {
   background: #ffbd38;
-  border-color: transparent;
 }
 .fixside .search .searchbut:hover span, .fixside .search .searchbut:active span, .fixside .search .searchbut.active span {
-  color: #000000;
+  color: #2e3f57;
 }
 .fixside .search .searchbut:hover .fixsideimg, .fixside .search .searchbut:active .fixsideimg, .fixside .search .searchbut.active .fixsideimg {
   background-position-y: 100%;
 }
 .fixside .search .searchbut span {
   font-size: 13px;
-  color: #ffc13c;
+  color: #feb300;
 }
 .fixside .search .searchbut .fixsideimg {
   width: 30px;
@@ -7866,12 +7887,12 @@ main .bg {
   height: 26px;
   font-size: 16px;
   padding-left: 10px;
-  border: solid 1px #a88335;
+  border: solid 1px #feb300;
   border-radius: 3px;
   float: left;
   margin: 15px 0px 0px 10px;
-  background: #101010;
-  color: #ffffff;
+  background: #19202a;
+  color: #3d5261;
 }
 .fixside .search input::placeholder {
   font-weight: bold;
@@ -7881,24 +7902,23 @@ main .bg {
 .fixside .search button {
   width: 50px;
   height: 28px;
-  background: #ffbd38;
-  color: #000000;
+  background: #feb300;
+  color: #1f385c;
   float: left;
   border-radius: 5px;
   font-size: 16px;
   margin: 16px 0px 16px 15px;
 }
 .fixside .search button:hover, .fixside .search button:active, .fixside .search button.active {
-  background: #ff4719;
-  color: #ffffff;
+  background: linear-gradient(to top, #feb300 0%, #ff9600 98%);
+  color: #1f385c;
 }
 .fixside .search .searchbox {
   width: 200px;
   height: auto;
   float: left;
-  margin: -5px 0px 0px -1px;
+  margin: -3px 0px 0px -1px;
   overflow: hidden;
-  border: solid 1px #a88335;
 }
 .fixside .search .searchbox li {
   width: 100%;
@@ -7907,7 +7927,7 @@ main .bg {
   padding-left: 20px;
   position: relative;
   font-size: 14px;
-  background: #252525;
+  background: #2e3f57;
   cursor: pointer;
   box-sizing: border-box;
   color: #ffc13c;
@@ -7918,37 +7938,49 @@ main .bg {
   height: 0px;
   position: absolute;
   border-style: solid;
-  border-color: #ffd973 transparent;
+  border-color: #5c6d79 transparent;
   border-width: 10px 8px 0px 8px;
   right: 20px;
   top: 21px;
   transform: rotate(-90deg);
   transition: 0.3s all;
 }
+.fixside .search .searchbox li::after {
+  content: "";
+  position: absolute;
+  width: 96%;
+  height: 1px;
+  left: 50%;
+  transform: translateX(-50%);
+  bottom: 0px;
+  background: #5c6d79;
+}
 .fixside .search .searchbox li:hover, .fixside .search .searchbox li:active, .fixside .search .searchbox li.active {
-  color: #ff4719;
+  color: #1f385c;
+  background: #feb300;
 }
 .fixside .search .searchbox li:hover::before, .fixside .search .searchbox li:active::before, .fixside .search .searchbox li.active::before {
   transform: rotate(0deg);
-  border-color: #ff4719 transparent;
+  border-color: #1f385c transparent;
+}
+.fixside .search .searchbox li:hover::after, .fixside .search .searchbox li:active::after, .fixside .search .searchbox li.active::after {
+  display: none;
 }
 .fixside .search .searchbox div {
-  background: #0c0c0c;
+  background: #2e3f57;
   width: 100%;
   height: 0px;
   overflow: hidden;
 }
 .fixside .search .searchbox div.open {
   height: auto;
-  border: solid 1px #a88335;
-  border-width: 1px 0px;
 }
 .fixside .search .searchbox div a {
   display: block;
   width: 90%;
   height: auto;
-  background: #292929;
-  color: #d78f3a;
+  background: #5c6d79;
+  color: #ffcc41;
   font-size: 14px;
   margin: 0px auto;
   box-sizing: border-box;
@@ -7963,11 +7995,11 @@ main .bg {
   margin-bottom: 10px;
 }
 .fixside .search .searchbox div a:hover, .fixside .search .searchbox div a:active, .fixside .search .searchbox div a.active {
-  background: #3c3c3c;
-  color: #ffc13c;
+  background: #ffcc41;
+  color: #2e3f57;
 }
 .fixside .search .searchbox div a:hover .num, .fixside .search .searchbox div a:active .num, .fixside .search .searchbox div a.active .num {
-  color: #ffc13c;
+  color: #2e3f57;
 }
 .fixside .search .searchbox div a .team {
   display: none;
@@ -7985,7 +8017,7 @@ main .bg {
   background-position-x: -60px;
 }
 .fixside .search .searchbox div a .num {
-  color: #d78f3a;
+  color: #ffcc41;
   padding-left: 5px;
 }
 .fixside .fun {
@@ -7999,26 +8031,26 @@ main .bg {
   display: block;
   width: 100%;
   height: 55px;
-  background: #1b1b1b;
+  background: #2e3f57;
   border-radius: 8px;
   text-align: center;
   margin-top: 10px;
   cursor: pointer;
-  border: solid 1px #a88335;
+  border: solid 1px #feb300;
 }
 .fixside .fun a:hover, .fixside .fun a:active, .fixside .fun a.active {
-  background: #ffbd38;
+  background: #feb300;
   border-color: transparent;
 }
 .fixside .fun a:hover span, .fixside .fun a:active span, .fixside .fun a.active span {
-  color: #000000;
+  color: #2e3f57;
 }
 .fixside .fun a:hover .fixsideimg, .fixside .fun a:active .fixsideimg, .fixside .fun a.active .fixsideimg {
   background-position-y: 100%;
 }
 .fixside .fun a span {
   font-size: 12px;
-  color: #ffc13c;
+  color: #feb300;
 }
 .fixside .fun a .fixsideimg {
   width: 30px;
