--- a/scss_7/_fixside.scss
+++ b/scss_7/_fixside.scss
@@ -66,30 +66,41 @@
     .search {
         width: 200px;
         height: 55px;
-        background: #1b1b1b;
+        background: #2e3f57;
         position: absolute;
         top: 0px;
         left: 65px;
         transition: 0.5s left;
         z-index: 2;
-        border: solid 1px #a88335;
-        border-bottom: none;
+        border: solid 1px #feb300;
         
         &.open {
             left: -135px;
+            border-left: none;
 
-            .searchbut {
-                
-                &:hover,&:active,&.active {
+            .searchbut.active {
+                left: -56px;
+                border-right: none;
+                border-radius: 8px 0px 0px 8px;
+                background: #2e3f57;
+
+                .fixsideimg {
+                    background-position-y: 0%;
+                }
+
+                span {
+                    color: #feb300;
+                }
+
+                &:hover,&:active {
                     background: #ffbd38;
-                    border-color: transparent;
-
+    
+                    span {
+                        color: #2e3f57;
+                    }
+    
                     .fixsideimg {
                         background-position-y: 100%;
-                    }
-                    
-                    span {
-                        color: #000000;
                     }
                 }
             }
@@ -101,18 +112,17 @@
             cursor: pointer;
             border-radius: 8px;
             position: absolute;
-            top: 0px;
+            top: -1px;
             left: -60px;
             text-align: center;
-            background: #1b1b1b;
-            border: solid 1px #a88335;
+            background: #2e3f57;
+            border: solid 1px #feb300;
 
             &:hover,&:active,&.active {
                 background: #ffbd38;
-                border-color: transparent;
 
                 span {
-                    color: #000000;
+                    color: #2e3f57;
                 }
 
                 .fixsideimg {
@@ -122,7 +132,7 @@
 
             span {
                 font-size: 13px;
-                color: #ffc13c;
+                color: #feb300;
             }
 
             .fixsideimg {
@@ -142,12 +152,12 @@
             height: 26px;
             font-size: 16px;
             padding-left: 10px;
-            border: solid 1px #a88335;
+            border: solid 1px #feb300;
             border-radius: 3px;
             float: left;
             margin: 15px 0px 0px 10px;
-            background: #101010;
-            color: #ffffff;
+            background: #19202a;
+            color: #3d5261;
 
             &::placeholder {
                 font-weight: bold;
@@ -159,16 +169,16 @@
         button {
             width: 50px;
             height: 28px;
-            background: #ffbd38;
-            color: #000000;
+            background: #feb300;
+            color: #1f385c;
             float: left;
             border-radius: 5px;
             font-size: 16px;
             margin: 16px 0px 16px 15px;
 
             &:hover,&:active,&.active {
-                background: #ff4719;
-                color: #ffffff;
+                background: linear-gradient(to top,#feb300 0%,#ff9600 98%);
+                color: #1f385c;
             }
         }
 
@@ -177,9 +187,8 @@
             width: 200px;
             height: auto;
             float: left;
-            margin: -5px 0px 0px -1px;
+            margin: -3px 0px 0px -1px;
             overflow: hidden;
-            border: solid 1px #a88335;
 
             li {
                 width: 100%;
@@ -188,7 +197,7 @@
                 padding-left: 20px;
                 position: relative;
                 font-size: 14px;
-                background: #252525;
+                background: #2e3f57;
                 cursor: pointer;
                 box-sizing: border-box;
                 color: #ffc13c;
@@ -199,7 +208,7 @@
                     height: 0px;
                     position: absolute;
                     border-style: solid;
-                    border-color: #ffd973 transparent;
+                    border-color: #5c6d79 transparent;
                     border-width: 10px 8px 0px 8px;
                     right: 20px;
                     top: 21px;
@@ -207,34 +216,48 @@
                     transition: 0.3s all;
                 }
 
+                &::after {
+                    content: "";
+                    position: absolute;
+                    width: 96%;
+                    height: 1px;
+                    left: 50%;
+                    transform: translateX(-50%);
+                    bottom: 0px;
+                    background: #5c6d79;
+                }
+
                 &:hover,&:active,&.active {
-                    color: #ff4719;
+                    color: #1f385c;
+                    background: #feb300;
 
                     &::before {
                         transform: rotate(0deg);
-                        border-color: #ff4719 transparent;
+                        border-color: #1f385c transparent;
+                    }
+
+                    &::after {
+                        display: none;
                     }
                 }
             }
 
             div {
-                background: #0c0c0c;
+                background: #2e3f57;
                 width: 100%;
                 height: 0px;
                 overflow: hidden;
 
                 &.open {
                     height: auto;
-                    border: solid 1px #a88335;
-                    border-width: 1px 0px;
                 }
 
                 a {
                     display: block;
                     width: 90%;
                     height: auto;
-                    background: #292929;
-                    color: #d78f3a;
+                    background: #5c6d79;
+                    color: #ffcc41;
                     font-size: 14px;
                     margin: 0px auto;
                     box-sizing: border-box;
@@ -251,11 +274,11 @@
                     }
 
                     &:hover,&:active,&.active {
-                        background: #3c3c3c;
-                        color: #ffc13c;
+                        background: #ffcc41;
+                        color: #2e3f57;
 
                         .num {
-                            color: #ffc13c;
+                            color: #2e3f57;
                         }
                     }
 
@@ -278,7 +301,7 @@
                     }
 
                     .num {
-                        color: #d78f3a;
+                        color: #ffcc41;
                         padding-left: 5px;
                     }
                 }
@@ -298,19 +321,19 @@
             display: block;
             width: 100%;
             height: 55px;
-            background: #1b1b1b;
+            background: #2e3f57;
             border-radius: 8px;
             text-align: center;
             margin-top: 10px;
             cursor: pointer;
-            border: solid 1px #a88335;
+            border: solid 1px #feb300;
 
             &:hover,&:active,&.active {
-                background: #ffbd38;
+                background: #feb300;
                 border-color: transparent;
 
                 span {
-                    color: #000000;
+                    color: #2e3f57;
                 }
 
                 .fixsideimg {
@@ -320,7 +343,7 @@
 
             span {
                 font-size: 12px;
-                color: #ffc13c;
+                color: #feb300;
             }
 
             .fixsideimg {
