--- a/scss_7/_rightside.scss
+++ b/scss_7/_rightside.scss
@@ -335,9 +335,6 @@
             overflow-y: auto;
             overflow-x: hidden;
             scrollbar-width: thin;
-            box-sizing: border-box;
-            border: solid 1px #775017;
-            border-width: 0px 1px;
 
             &::-webkit-scrollbar {
                 width: 5px;
@@ -370,8 +367,8 @@
                     position: relative;
                     overflow: hidden;
                     cursor: pointer;
-                    background: #252525;
-                    border-bottom: solid 1px #b5833b;
+                    background: #3d5261;
+                    border-bottom: solid 1px #2e3f57;
 
                     &:nth-of-type(1) {
                         margin-top: 5px;
@@ -385,36 +382,35 @@
 
                         &::before {
                             transform: rotate(90deg);
-                            border-color: transparent #ff4719;
+                            border-color: transparent #feb300;
                         }
 
                         .gameName {
-                            color: #ff4719;
-                            background: #3c3c3c;
+                            color: #feb300;
+                            background: #2e3f57;
                         }
 
                         .games {
-                            color: #ff4719;
+                            color: #feb300;
                         }
                     }
 
                     &.active {
                         height: auto;
-                        background: #3c3c3c;
 
                         &::before {
                             transform: rotate(90deg);
-                            border-color: transparent #ff4719;
+                            border-color: transparent #feb300;
                         }
 
                         .gameName {
-                            color: #ff4719;
-                            background: #3c3c3c;
-                            border-bottom: solid 1px #b5833b;
+                            color: #feb300;
+                            background: #2e3f57;
+                            box-shadow: 0px 0px 0px 1px #feb300 inset;
                         }
 
                         .games {
-                            color: #ff4719;
+                            color: #feb300;
                         }
                     }
 
@@ -425,7 +421,7 @@
                         height: 0px;
                         border-style: solid;
                         border-width: 7px 0px 7px 8px;
-                        border-color: transparent #ffd973;
+                        border-color: transparent #2e3f57;
                         right: 25px;
                         top: 8px;
                         transition: 0.3s all;
@@ -435,7 +431,7 @@
                         display: block;
                         width: 100%;
                         height: 30px;
-                        color: #ffc13c;
+                        color: #ffcc41;
                         font-size: 13px;
                         box-sizing: border-box;
                         padding-left: 25px;
@@ -445,7 +441,7 @@
                     .games {
                         font-size: 13px;
                         font-weight: bold;
-                        color: #fb770a;
+                        color: #ffcc41;
                         position: absolute;
                         right: 60px;
                         top: 0px;
@@ -454,7 +450,7 @@
                     .innerList {
                         width: 96%;
                         height: 70px;
-                        background: #181818;
+                        background: #2e3f57;
                         position: relative;
                         cursor: default;
                         border-radius: 5px;
@@ -472,33 +468,30 @@
                             top: 50%;
                             transform: translateY(-50%);
                             font-size: 12px;
-                            color: #ababab;
+                            color: #f1f1f1;
 
                             span {
                                 font-weight: bold;
-                                color: #ffc13c;
+                                color: #feb300;
 
                                 .situation {
                                     font-weight: normal;
                                     float: right;
                                     margin-right: 20px;
-                                    color: #8e7352;
+                                    color: #bcbcbc;
 
                                     &.onLive {
-                                        position: relative;
-                                        color: #ffffff;
-                                        margin: -7px 15px 0px 0px;
-                                        
-                                        &::after {
-                                            content: "";
-                                            position: absolute;
-                                            width: 40px;
-                                            height: 19px;
-                                            top: -1px;
-                                            left: -10px;
-                                            background: url('../images/forCss_7/liveBg3.png') no-repeat;
-                                            z-index: -1;
-                                        }
+                                        position: absolute;
+                                        color: transparent;
+                                        user-select: none;
+                                        top: -8px;
+                                        right: -10px;
+                                        width: 0px;
+                                        height: 0px;
+                                        border-radius: 0px 5px 0px 0px;                                    
+                                        border-style: solid;
+                                        border-width: 10px;
+                                        border-color: #109037 #109037 transparent transparent;
                                     }
                                 }
                             }
@@ -509,13 +502,31 @@
                                 bottom: 0px;
                                 width: 70px;
                                 height: 30px;
-                                background: #ffbd38;
+                                background: #ffffff;
                                 border-radius: 3px;
-                                color: #000000;
+                                color: #2e3f57;
 
-                                &:hover,&:active,&.active {
-                                    background: #ff4719;
-                                    color: #ffffff;
+                                &:hover,&:active {
+                                    background: #feb300;
+                                    color: #2e3f57;
+                                }
+
+                                &.active {
+                                    background: #19202a;
+                                    color: #feb300;
+                                    
+                                    &:hover,&:active {
+                                        border: solid 1px #feb300;
+                                        background: #212832;
+                                        color: #ffffff;
+                                    }
+                                }
+
+                                &.disable {
+                                    background: #909090 !important;
+                                    color: #cccccc !important;
+                                    user-select: none;
+                                    pointer-events: none;
                                 }
                             }
                         }
@@ -523,7 +534,7 @@
                 }
             }
         }
-        //即時注單
+        //即時注單 
         .bettingStatus {
             display: none;
             width: 100%;
