--- a/scss_7/_type.scss
+++ b/scss_7/_type.scss
@@ -157,7 +157,7 @@
 .hideboard {
     width: 1260px;
     height: 80px;
-    background: #101010;
+    background: #19202a;
     position: absolute;
     z-index: 5;
     left: 280px;
@@ -168,7 +168,7 @@
 .topfix {
     width: calc(100% - 660px);
     height: 50px;
-    background: #252525;
+    background: #3d5261;
     position: absolute;
     top: 15px;
     left: 280px;
